--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 ];
 
 const customLabels = [
-    "MAIS UMm", "MENOS UM", "PTAX", "PTAX FUTURO",
+    "MAIS UM", "MENOS UM", "PTAX", "PTAX FUTURO",
     "CUPOM", "USD-BRL", "CME - ABERTURA ", "CME - BAIXA", "CME - ALTA", "XAU-MAX",
     "XAU-MIN", "DX - ABERTURA", "DX - MAX", "DX - MAX",
     "DX - MIN", "Supplier Contracts", "Legal Documents", "Financial Summary"
