--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script>
        const files = [
     "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/ptax.txt", "arquivos/ptax-futuro.txt", 
-    "arquivos/cupom2.txt", "arquivos/usd-brl.txt", "arquivos/cme-abertura.txt", "arquivos/cme-alta.txt","arquivos/cme-baixa.txt", 
+    "arquivos/cupom2.txt", "arquivos/usd-brl.txt",  "arquivos/cme-alta.txt","arquivos/cme-baixa.txt", 
     "arquivos/xau-alta.txt", "arquivos/xau-baixa.txt", "arquivos/dx-openn.txt", "arquivos/dx-alta.txt","arquivos/dx-baixa.txt"
 ];
 
