--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
     <script>
        const files = [
-    "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/ptax.txt", "arquivos/ptax-futuro.txt", 
+    "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/pys/ptax-ptaxfut.txt", 
     "arquivos/cupom2.txt", "arquivos/usd-brl.txt",  "arquivos/cme-alta.txt","arquivos/cme-baixa.txt", 
     "arquivos/xau-alta.txt", "arquivos/xau-baixa.txt", "arquivos/dx-openn.txt", "arquivos/dx-alta.txt","arquivos/dx-baixa.txt"
 ];
 
 const customLabels = [
-    "MAIS UM", "MENOS UM", "PTAX", "PTAX FUTURO",
+    "MAIS UM", "MENOS UM", "PTAX + FUTURO",
     "CUPOM", "USD-BRL", "CME - ABERTURA ", "CME - BAIXA", "CME - ALTA", "XAU-MAX",
     "XAU-MIN", "DX - ABERTURA", "DX - MAX", "DX - MAX",
     "DX - MIN", "Supplier Contracts", "Legal Documents", "Financial Summary"
