--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <script>
        const files = [
-    "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/pys/ptax-ptaxfut.txt", 
+    "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/ptax-ptaxfut.txt", 
     "arquivos/cupom2.txt", "arquivos/usd-brl.txt",  "arquivos/cme-alta.txt","arquivos/cme-baixa.txt", 
     "arquivos/xau-alta.txt", "arquivos/xau-baixa.txt", "arquivos/dx-openn.txt", "arquivos/dx-alta.txt","arquivos/dx-baixa.txt"
 ];
