--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     "arquivos/maisum.txt", "arquivos/menosum.txt", "arquivos/ptax-ptaxfut.txt", 
     "arquivos/cupom2.txt", "arquivos/usd-brl.txt",  "arquivos/cme-alta.txt","arquivos/cme-baixa.txt", 
     "arquivos/xau-alta.txt", "arquivos/xau-baixa.txt", "arquivos/dx-openn.txt", "arquivos/dx-alta.txt","arquivos/dx-baixa.txt",
-    "logs/relatorio.log"
+    "arquivos/relatorio.txt"
 ];
 
 const customLabels = [
