--- a/app.html
+++ b/app.html
@@ -110,7 +110,7 @@
         const fileNames = [
             "maisum.txt", "menosum.txt", "ptax-ptaxfut.txt", 
             "cupom2.txt", "usd-brl.txt", "cme-baixa.txt", "cme-alta.txt", 
-            "xau-alta.txt", "xau-baixa.txt", "dx-openn.txt", 
+            "xau-max.txt", "xau-min.txt", "dx-openn.txt", 
             "dx-alta.txt", "dx-baixa.txt", "relatorio.txt"
         ];
 
